[package]
name = "biomass-lot"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "Hemp biomass lots: statutory material categories, analytes, FSA seed-label facts and total-THC arithmetic. The attestation machinery lives in the neutral attestation-core crate. No price, no score, no rating, no b."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
attestation-core = { git = "https://github.com/beehive-nature/attestation-core", rev = "cb06633446dffb88860c73d5933034e4036c6a56" }
