[package]
name = "treasury"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "The fiscal layer of an accord: tithe (DAO-ratified gift, never fiat), duty leg, permission screen (Law 1a: empty rule set refuses), citizen-held record (no reporting path), stable rails. Types and lint only, testnet. No leg holds b; fUSD is definition-only and unnameable. T-0 (the b-collateral Treasury contract) is deliberately not built here."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
attestation-core = { git = "https://github.com/beehive-nature/attestation-core", rev = "cb06633446dffb88860c73d5933034e4036c6a56" }
